--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.5'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
